--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-session-sequelize": "^7.1.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.21",
     "@types/validator": "^13.1.3",
     "autoprefixer": "^10.2.3",
