--- a/package.json
+++ b/package.json
@@ -13,18 +13,26 @@
   "author": "mmunir",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.1",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.4.0"
+    "sequelize": "^6.4.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/connect-flash": "0.0.36",
+    "@types/csurf": "^1.11.0",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/node": "^14.14.21",
+    "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "autoprefixer": "^10.2.3",
     "jest": "^26.6.3",
