--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "connect-flash": "^0.1.1",
     "connect-session-sequelize": "^7.1.1",
     "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.5.0",
     "sequelize": "^6.4.0",
     "uuid": "^8.3.2"
   },
@@ -31,7 +34,9 @@
     "@types/csurf": "^1.11.0",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/express-validator": "^3.0.0",
     "@types/node": "^14.14.21",
+    "@types/nodemailer": "^6.4.1",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "autoprefixer": "^10.2.3",
