--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
+    "pdfkit": "^0.12.0",
     "sequelize": "^6.4.0",
     "uuid": "^8.3.2"
   },
@@ -35,8 +37,10 @@
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/express-validator": "^3.0.0",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.21",
     "@types/nodemailer": "^6.4.1",
+    "@types/pdfkit": "^0.11.0",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "autoprefixer": "^10.2.3",
